# simple-irc-server

./: Cargo.toml  README.md  config-example.toml
src/: command.rs  config.rs  help.rs  main.rs  reply.rs  state.rs  utils.rs
src/state/: channel_cmds.rs  conn_cmds.rs  mod.rs  rest_cmds.rs  srv_query_cmds.rs  structs.rs
test_data/: cert.crt  cert_key.crt
