[package]
name = "simple-irc-server"
authors = ["Mateusz Szpakowski"]
license = "GNU Lesser General Public License v2.1"
version = "0.1.0"
edition = "2018"
description = "Simple IRC server"
categories = ["network-programming"]
keywords = ["irc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
tokio = { version = "1.0", features = [ "full" ] }
tokio-util = { version = "0.7.0", features = [ "codec" ] }
tokio-stream = "0.1"
tracing = "0.1"
futures = "0.3.0"
toml = "0.5"
serde = "1.0.0"
serde_derive = "1.0.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.0.0", features = ["derive"] }
validator = { version = "0.14", features = [ "derive" ] }
bytes = "1.1.0"
const-table = "0.1.0"
flagset = "0.4"
tokio-rustls = "0.23"
rustls = "0.20"
rustls-pemfile = "1.0"
trust-dns-resolver = "0.21"

[dependencies.tracing-subscriber] 
version = "0.3.1"
default-features = false
features = ["fmt", "ansi", "env-filter", "tracing-log"]

[dev-dependencies]
tokio = { version = "1.0", features = [ "full", "test-util" ] }
rcgen = { version = "0.9", features = [ "pem" ] }
webpki = "0.22"
